--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             روابط هامة
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li> <a class="dropdown-item" href="">soon</a></li>
+            <li> <a class="dropdown-item" href="index">soon</a></li>
             <li><a class="dropdown-item" href="">soon</a></li>
             <li><hr class="dropdown-divider"></li>
             <li><a class="dropdown-item" href="">soon</a></li>
@@ -116,7 +116,7 @@
   
   
  <div class="form">
-    <div class="input">
+    <div class="input" style="margin-top: 12px;">
         <label>  : الاسم الكامل</label><br>
         <input type="text" placeholder="الاسم الثلاثي">
     </div>
